[package]
name = "rustable"
description = "Another crate for using Bluetooth Low Energy with Bluez."
version = "0.2.2"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/cmaves/rustable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rustbus = { git = "https://github.com/cmaves/async-rustbus.git" }
async-std = "1.9"
libc = "0.2"
futures = "0.3"
futures-enum = "0.1.16"
xml-rs = "0.8"
