[package]
name = "rustable"
description = "Another crate for using Bluetooth Low Energy with Bluez."
version = "0.3.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/cmaves/rustable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.19.2"
async-rustbus = { git = "https://github.com/cmaves/async-rustbus", branch = "tokio" }
async-channel = "1.6.1"
libc = "0.2.126"
futures = "0.3.21"
futures-enum = "0.1.17"
xml-rs = "0.8.3"
log = "0.4.17"

[dev-dependencies]
rand = "0.8"
